log
Thu 21 Mar 2024 08:09:51 PM UTC: 
 tests:  0|5
total_score: 0/70
0324146
Thu 21 Mar 2024 08:16:00 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7e560a0
Thu 21 Mar 2024 08:17:17 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   67 |    while(dato != NULL)
      |    ^~~~~
exercises.c:69:6: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   69 |      dato = (int*)next(L);
      |      ^~~~
cc1: all warnings being treated as errors
Compilation failed
145a191
Thu 21 Mar 2024 08:17:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   67 |    while(dato != NULL)
      |    ^~~~~
exercises.c:69:6: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   69 |      *dato = (int*)next(L);
      |      ^
exercises.c:69:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
ffbb6fa
Thu 21 Mar 2024 08:18:11 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
0f790a8
Thu 21 Mar 2024 08:18:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      suma += dato;
      |           ^~
exercises.c:70:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
8913e64
Thu 21 Mar 2024 08:18:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
70b1bb8
Thu 21 Mar 2024 08:19:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      suma += dato;
      |           ^~
exercises.c:70:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
a1d8470
Thu 21 Mar 2024 08:19:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      suma += dato;
      |           ^~
cc1: all warnings being treated as errors
Compilation failed
2d9984a
Thu 21 Mar 2024 08:20:20 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:16: error: comparison between pointer and integer [-Werror]
   66 |    while(*dato != NULL)
      |                ^~
exercises.c:69:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
be485e4
Thu 21 Mar 2024 08:20:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |      *dato = (int*)next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
5b0face
Thu 21 Mar 2024 08:20:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a24685f
Thu 21 Mar 2024 08:22:50 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
d8301bf
Thu 21 Mar 2024 08:31:43 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7317f15
Thu 21 Mar 2024 08:32:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
56b10ef
Thu 21 Mar 2024 08:41:25 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:18: error: expected expression before ‘)’ token
  135 |       if(dato == )
      |                  ^
Compilation failed
cf12b59
Thu 21 Mar 2024 08:41:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
901b73f
Thu 21 Mar 2024 08:43:05 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:27: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  135 |       if(cadena[i] == ')' && *dato != '(' || cadena[i] == ']' && *dato != '[' || cadena[i] == '}' && *dato != '{'))
      |          ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
exercises.c:135:99: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  135 |       if(cadena[i] == ')' && *dato != '(' || cadena[i] == ']' && *dato != '[' || cadena[i] == '}' && *dato != '{'))
      |                                                                                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
exercises.c:135:115: error: expected statement before ‘)’ token
  135 |       if(cadena[i] == ')' && *dato != '(' || cadena[i] == ']' && *dato != '[' || cadena[i] == '}' && *dato != '{'))
      |                                                                                                                   ^
cc1: all warnings being treated as errors
Compilation failed
814c399
Thu 21 Mar 2024 08:43:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:27: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  135 |       if(cadena[i] == ')' && *dato == '(' || cadena[i] == ']' && *dato == '[' || cadena[i] == '}' && *dato == '{'))
      |          ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
exercises.c:135:99: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  135 |       if(cadena[i] == ')' && *dato == '(' || cadena[i] == ']' && *dato == '[' || cadena[i] == '}' && *dato == '{'))
      |                                                                                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
exercises.c:135:115: error: expected statement before ‘)’ token
  135 |       if(cadena[i] == ')' && *dato == '(' || cadena[i] == ']' && *dato == '[' || cadena[i] == '}' && *dato == '{'))
      |                                                                                                                   ^
cc1: all warnings being treated as errors
Compilation failed
ef6f4e6
